# deno-mpv

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  deps.ts  install.ts  plugin.ts
.github/workflows/: test.yml
examples/: play.ts
scripts/: build.ts  fix_dylib.sh  libmpv.ts  mpv.ts  run.ts
src/: lib.rs
utils/: libmpv.ts  load_plugin.ts
